<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_main_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_mini"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/music" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_frag_title"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_frag_subtitle"
                android:textColor="@android:color/darker_gray"
                android:textSize="12dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_duration"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/music_frag_time"
            android:textSize="12dp" />

    </LinearLayout>
</layout>